# pidcat

./: Cargo.toml  README.md
examples/: colored.rs  lib.rs  logcat.rs  ps.rs  re.rs
src/: cli.rs  lib.rs  log.rs  main.rs
src/filter/: buffer_filter.rs  level_filter.rs  mod.rs  pid_filter.rs  revert_filter.rs  tag_filter.rs
src/sink/: file.rs  mod.rs  terminal.rs
src/source/: adb.rs  file.rs  mod.rs
